--- a/Spotter_group/Spotter_group.csproj
+++ b/Spotter_group/Spotter_group.csproj
@@ -206,6 +206,9 @@
   <ItemGroup>
     <Resource Include="images\Graphics\raw boy lifter.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Documentation\RandomCodeSnipets.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
