Added Protein.xml, code for XML update insert and delete

--- a/Spotter_group/Spotter_group.csproj
+++ b/Spotter_group/Spotter_group.csproj
@@ -209,6 +209,13 @@
   <ItemGroup>
     <Resource Include="Documentation\RandomCodeSnipets.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Documentation\XML Update Delete Insert Code.txt" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Data\Protein.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
