added exercises.xml to data file and grid to Admin.xaml

--- a/Spotter_group/Spotter_group.csproj
+++ b/Spotter_group/Spotter_group.csproj
@@ -212,7 +212,9 @@
   <ItemGroup>
     <Resource Include="Documentation\XML Update Delete Insert Code.txt" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Data\Exercises.xml" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Data\Protein.xml" />
   </ItemGroup>
