nutrition.xaml edited, food.xml added, and other small changes

--- a/Spotter_group/Spotter_group.csproj
+++ b/Spotter_group/Spotter_group.csproj
@@ -216,7 +216,7 @@
     <Resource Include="Data\Exercises.xml" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Data\Protein.xml" />
+    <Resource Include="Data\Food.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
