update registration page

--- a/Spotter_group/Spotter_group.csproj
+++ b/Spotter_group/Spotter_group.csproj
@@ -218,6 +218,12 @@
   <ItemGroup>
     <Resource Include="Data\Protein.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\Characters\Ursula.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\Characters\littlemermaid.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
