--- a/Spotter_group/Spotter_group.csproj
+++ b/Spotter_group/Spotter_group.csproj
@@ -227,6 +227,9 @@
   <ItemGroup>
     <Resource Include="Documentation\WorkoutOptions.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Data\test.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
