--- a/Spotter_group/Spotter_group.csproj
+++ b/Spotter_group/Spotter_group.csproj
@@ -288,6 +288,9 @@
   <ItemGroup>
     <Resource Include="images\Graphics\signin.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Data\Visible.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
