--- a/Spotter_group/Spotter_group.csproj
+++ b/Spotter_group/Spotter_group.csproj
@@ -248,7 +248,9 @@
     <Resource Include="images\Characters\Wile_E_Coyote.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Data\Users.xml" />
+    <Resource Include="Data\Users.xml">
+      <SubType>Designer</SubType>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="images\Gifs\jump-rope.gif" />
@@ -287,6 +289,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="images\Graphics\signin.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Data\Visible.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
